<?php die(); ?>
Akeeba Panopticon 1.3.2
================================================================================
~ More verbose logging when enqueueing emails.

Akeeba Panopticon 1.3.1
================================================================================
+ Better worded messages when you have Akeeba Backup Core instead of Professional
~ Make accurate PHP CLI path detection optional
# [HIGH] CRON jobs didn't work correctly in the Docker image [gh-856]
# [HIGH] Cannot set up update preferences for Joomla! extensions whose name does nor conform to Joomla's standards (even though Joomla allows them to be installed, because it fails to enforce its own naming standards!)
# [MEDIUM] Site Information doesn't show extension errors
# [MEDIUM] PHP error trying to log in with a username that doesn't exist
# [LOW] Logs and Tasks views: warning if there's a log/task belonging to a deleted site
# [LOW] If an extension's short name starts with the character `a`, that letter is cut off

Akeeba Panopticon 1.3.0
================================================================================
+ Domain registration and expiration warnings
+ Force MFA for specific user groups, superusers, or administrators [gh-723]
+ Option to treat MFA failures as login failures [gh-723]
+ Enforce a maximum number of MFA attempts [gh-723]
+ Accurate PHP CLI path in the CRON job setup page
+ Improve update installation [gh-803]
# [HIGH] Cannot connect to really old WordPress installations (WordPress 5.5 and earlier)
# [HIGH] Cannot connect to old Akeeba Backup for WordPress (version 7)
# [HIGH] PHP error when WordPress fails to provide version information
# [LOW] Connection Doctor causes misleading reports on WordPress [gh-807]

Akeeba Panopticon 1.2.2
================================================================================
+ Optional environment variables-only configuration of containerized Panopticon [gh-696]
+ Clear the cache when relinking a site to Akeeba Backup