@@ -1013,6 +1013,13 @@ PANOPTICON_SITES_LBL_AKEEBABACKUP_CORE_HEAD="Akeeba Backup Core is not compatibl
 PANOPTICON_SITES_LBL_AKEEBABACKUP_CORE_BODY="You need to install Akeeba Backup Professional on your site to schedule and execute backups through Panopticon."
 PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_HEAD="Cannot find a way to connect to Akeeba Backup."
 PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_BODY="Panopticon cannot find a way to connect to your site's Akeeba Backup JSON API."
+PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_TIPS="Tips to connect Akeeba Panopticon to Akeeba Backup Professional"
+PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_TIP_1="Make sure that you have installed and enabled the Akeeba Backup Professional component, and the Web Services - Akeeba Backup plugin on your site. Akeeba Backup Core <em>is not</em> compatible with Akeeba Panopticon."
+PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_TIP_1_WP="Make sure that you have installed and enabled the Akeeba Backup Professional plugin on your site. Akeeba Backup Core <em>is not</em> compatible with Akeeba Panopticon."
+PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_TIP_2="Log into your site's backend. Go to Components, Akeeba Backup, Control Panel. Click on Options, Front-end Backup and set “Enable JSON API (remote backup)” to Yes. Enter a new “Secret Word”; you can create a new, random, secure secret word at <a href=\"https://www.random.org/passwords/?num=1&len=32&format=html&rnd=new\">random.org</a>. Then, click on Save &amp Close in the toolbar."
+PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_TIP_2_WP="Log into your site's backend. Go to Akeeba Backup, System Configuration, Public API and set “Enable JSON API (remote backup)” to Yes. Enter a new “Secret Key”; you can create a new, random, secure key at <a href=\"https://www.random.org/passwords/?num=1&len=32&format=html&rnd=new\">random.org</a>. Then, click on Save &amp Close in the toolbar."
+PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_TIP_3="Make sure that no third party extensions (especially security extensions) and/or server configuration settings prevent access to your site's <code>api</code> folder. Also check that the responses from that file are <em>not</em> cached by any third party plugins on your site, your web server, or any CDN / caching proxy which may be configured to be in front of your site."
+PANOPTICON_SITES_LBL_AKEEBABACKUP_CANNOTCONNECT_TIP_3_WP="Make sure that no third party plugins (especially security plugins) and/or server configuration settings prevent access to your site's <code>wp-admin/admin-ajax.php</code> file. Also check that the responses from that file are <em>not</em> cached by any third party plugins on your site, your web server, or any CDN / caching proxy which may be configured to be in front of your site."
 PANOPTICON_SITES_LBL_AKEEBABACKUP_NOTLINKED_HEAD="Akeeba Backup is not linked."
 PANOPTICON_SITES_LBL_AKEEBABACKUP_NOTLINKED_BODY="This may happen if Akeeba Backup was installed after adding the site to Akeeba Panopticon, the Panopticon Connector installed on the site is too old, or if there's been an error communicating with the site."
 PANOPTICON_SITES_LBL_AKEEBABACKUP_NOTLINKED_SOLUTION_ADMIN="Please click the button below to try relinking Akeeba Backup with Panopticon. If this doesn't work please update the Akeeba Panopticon Connector on your site, make sure its plugin is published, and check if you can communicate with the site correctly."
