@@ -1,6 +1,7 @@
 <?php die(); ?>
 Akeeba Panopticon 1.3.2
 ================================================================================
++ Tips to connect Akeeba Backup Professional for WordPress to Panopticon
 ~ More verbose logging when enqueueing emails.
 
 Akeeba Panopticon 1.3.1
